--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,6 +1,10 @@
 streamlit
-pandas
+pandas==2.2.2
+numpy==1.26.4
+pip==24.2
+matplotlib==3.9.0 
 scikit-learn
 joblib
 mysql-connector-python
-openpyxl
+openpyxl==3.1.5
+scipy==1.14.0
